--- a/README.adoc
+++ b/README.adoc
@@ -1,4 +1,12 @@
 = Country Service
+:toc: preamble
+:toclevels: 3
+
+:uri-build-status: https://github.com/aduursma/country-service/actions
+:img-build-status: https://img.shields.io/github/workflow/status/aduursma/country-service/Release%20Pipeline?color=green&label=GitHub%20Actions&logo=github
+:uri-version: https://github.com/aduursma/country-service/actions
+:img-version: https://img.shields.io/github/v/release/aduursma/country-service?color=green&label=Version&logo=github
+image:{img-build-status}[Build Status Badge,link={uri-build-status}] image:{img-version}[Version Badge,link={uri-version}]
 
 == Introduction
 The *Country Service* is part of the _Microservices Playground_ project.
